List view table sorting name overlapping fixed-Sangram Desai

--- a/magenta-simple/core/css/server.css
+++ b/magenta-simple/core/css/server.css
@@ -1071,7 +1071,7 @@ input[type="checkbox"].checkbox:checked + label:before {
 table th .sort-indicator {
     width: 10px;
     height: 8px;
-    margin-right: -60px; 
+    margin-left: -60px; 
     display: inline-block;
     vertical-align: text-bottom;
     opacity: 0.3;
